[DL] T4: finish note [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/DL/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/DL/index.html
@@ -73,6 +73,9 @@ Herramientas y estrategias de programación e implemetación de redes neuronales
 <a href="03/03_proveedores.html">Proveedores</a>
 
 </li></ol>
+</li><li>
+<a href="04_cnn.html">Redes Neuronales Convolucionales en Visión Artificial</a>
+
 </li></ol>
 </div>
   
