[DL] T5: finish notes [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/DL/04_cnn.html
+++ b/src/Notes/DataScience/Master/2C_2C/DL/04_cnn.html
@@ -41,7 +41,7 @@
 <div id="Redes Neuronales Convolucionales en Visión Artificial-Clasificación de Imágenes"><h2 id="Clasificación de Imágenes" class="header"><a href="#Redes Neuronales Convolucionales en Visión Artificial-Clasificación de Imágenes">Clasificación de Imágenes</a></h2></div>
 
 <p>
-Una CNN para clasificación de imágnes está conformada por dos bloques:
+Una CNN para clasificación de imágenes está conformada por dos bloques:
 </p>
 
 <ol>
@@ -186,7 +186,7 @@ Se procesan las cajas utilizando regresión lineal para ajustar las coordenadas
 <div id="Redes Neuronales Convolucionales en Visión Artificial-Segmentación Semántica"><h2 id="Segmentación Semántica" class="header"><a href="#Redes Neuronales Convolucionales en Visión Artificial-Segmentación Semántica">Segmentación Semántica</a></h2></div>
 
 <p>
-En la segmentación clásica el objetivo consiste en agrupar píxeles contiguis de una categoría similar.
+En la segmentación clásica el objetivo consiste en agrupar píxeles contiguos de una categoría similar.
 </p>
 
 <p>
