--- a/src/Notes/DataScience/Master/2C_2C/DL/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/DL/index.html
@@ -76,6 +76,9 @@ Herramientas y estrategias de programación e implemetación de redes neuronales
 </li><li>
 <a href="04_cnn.html">Redes Neuronales Convolucionales en Visión Artificial</a>
 
+</li><li>
+<a href="05_rnn.html">Redes Neuronales Recurrentes</a>
+
 </li></ol>
 </div>
   
