[AAII] T4: start notes on section 03 [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/AAII/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/AAII/index.html
@@ -105,6 +105,9 @@
 </li><li>
 <a href="T4/02_cluster_analysis.html">Cluster Analysis</a>
 
+</li><li>
+<a href="T4/03_evaluation_metrics.html">Evaluation Metrics</a>
+
 </li></ol>
 </div>
   
