[AGAA] Fix typos on section 08_01 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/08_01.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/08_01.html
@@ -115,7 +115,7 @@ The angles whose measures differ by a multiple of \(360º\) are called <span id=
 <div id="Angles and Their Measures-Radian Measure"><h2 id="Radian Measure" class="header"><a href="#Angles and Their Measures-Radian Measure">Radian Measure</a></h2></div>
 
 <p>
-An angle with vertex at the center of a circle that intercepts an arc on the circle equal in length to the radius of the circle has measure *\(1\) radian*.
+An angle with vertex at the center of a circle that intercepts an arc on the circle equal in length to the radius of the circle has measure \(1\) <span id="Angles and Their Measures-Radian Measure-radian"></span><strong id="radian">radian</strong>.
 </p>
 
 <p>
@@ -183,7 +183,7 @@ The interior of a circle can be thought of as a sector intercepted by a central 
 </p>
 
 <p>
-If a central angle for a sector has measure u radians, then the sector makes up the fraction \(\frac{\theta}{2\pi}\) of a complete circle. The area inside a circle with radius \(r\) is \(\mathcal{A} = \pi r^2\), Therefore,
+If a central angle for a sector has measure \(\theta\) radians, then the sector makes up the fraction \(\frac{\theta}{2\pi}\) of a complete circle. The area inside a circle with radius \(r\) is \(\mathcal{A} = \pi r^2\), Therefore,
 the area of the sector is given by the product of the fraction \(\frac{\theta}{2\pi}\) and the total area:
 </p>
 
